# qt_video_face_detection

./: CMakeLists.txt  README.md
include/: cv_utils.hpp  detect_multiscale_param.hpp  image_filter.hpp  image_item.hpp  image_list_delegate.hpp  image_list_model.hpp  main_window.hpp  qclicklabel.hpp  video_face_detection.hpp
src/: cv_utils.cpp  image_filter.cpp  image_item.cpp  image_list_delegate.cpp  image_list_model.cpp  main_app.cpp  main_window.cpp  qclicklabel.cpp  ui_video_face_detection.ui  video_face_detection.cpp  video_face_detection.ui
src/qt_video_app/: main_app.cpp  main_window.cpp
src/video_face_detection/: qclicklabel.cpp  video_face_detection.cpp  video_face_detection.ui
